provider view advert pages updated

--- a/app/views/v7/employer/account/preview.html
+++ b/app/views/v7/employer/account/preview.html
@@ -18,6 +18,10 @@ Manage apprentices
   .das-edit-link{margin-top:-10px}
 </style>
 
+<h1 class="govuk-heading-xl"> View your advert </h1>
+
+<div class="govuk-!-padding-7" style="border:1px solid #b1b4b6">
+
 <div class="govuk-grid-row govuk-!-margin-bottom-6">
   <div class="govuk-grid-column-full">
     <h2 class="govuk-heading-xl govuk-!-margin-bottom-6 govuk-!-width-three-quarters">
@@ -219,10 +223,7 @@ Manage apprentices
   </div>
 </div>
 
-<hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-      <a href="../dashboard" class="govuk-link">Return to dashboard</a>
+</div>
 </div>
 
 {% endblock %}
