--- a/app/views/v7/employer/account/manage-vacancy-no-apprentice.html
+++ b/app/views/v7/employer/account/manage-vacancy-no-apprentice.html
@@ -5,7 +5,7 @@
 Manage apprentices
 {% endblock %}
 {% block beforeContent %}
-  <a href="javascript:history.back()" class="govuk-back-link">Back to vacancies</a>
+  <a href="javascript:history.back()" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
 
@@ -34,59 +34,86 @@ line-height: 1.25 !important; */
   }
 </style>
 
+
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-6">
-    <h1 class="govuk-heading-xl">Manage vacancy</h1>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half ">
-        <span class="govuk-body govuk-!-font-weight-bold">Status</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">Live</span>
+  <div class="govuk-grid-column-full">
+    <h1 class="govuk-heading-xl">Manage advert</h1>
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full ">
+       
+        <!-- ////START SUMMARY//// -->
+<dl class="govuk-summary-list">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Status
+    </dt>
+    <dd class="govuk-summary-list__value">
+      Pending ESFA review
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Advert title
+    </dt>
+    <dd class="govuk-summary-list__value">
+      Apprentice Bricklayer
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Advert reference
+    </dt>
+    <dd class="govuk-summary-list__value">
+      VAC1000000997
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Closing date
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">01 Jan 2022</p>
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Possible start date
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">01 Aug 2022</p>
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Disability confident
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">Yes</p>
+    </dd>
+  </div>
+</dl>
+<!-- ////END SUMMARY//// -->
+
       </div>
     </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Vacancy title</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">Apprentice Bricklayer</span>
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Vacancy ref</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">VAC1000000997</span>
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half govuk-!-font-weight-bold">
-        <span class="govuk-body">Closing date</span>
-      </div>
-      <div class="govuk-grid-column-one-half ">
-        <span class="govuk-body">01 Jan 2019
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Possible start date</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">01 Feb 2019</span>
-      </div>
-    </div>
+
     <div class="grid-row">
       <div class="column-full">
-        <ul class="govuk-list">
-          <li><a class="govuk-link button-link" href="preview-edit">Edit vacancy</a></li>
-          <li><a class="govuk-linkbutton-link" href="clone-dates">Clone vacancy</a></li>
-          <li><a class="govuk-linkbutton-link" target="_blank" href="preview">View vacancy</a></li>
-          <li><a class="govuk-link button-link" href="#">Close vacancy</a></li>
-        </ul>
+       
+
+          <form method="post" action="preview">
+
+          <button class="govuk-button" data-module="govuk-button">
+            View advert
+          </button>
+
+        </form>
+
         <p class="govuk-body">
 
+          <a class="govuk-link button-link" href="preview-edit">Edit advert</a> &nbsp;
+          <a class="govuk-linkbutton-link" href="clone-dates">Clone advert</a> &nbsp;
+         <a class="govuk-link button-link" href="#">Close advert</a>
         </p>
 
 
