--- a/app/views/v7/provider/account/manage-vacancy.html
+++ b/app/views/v7/provider/account/manage-vacancy.html
@@ -6,11 +6,13 @@ Manage vacancy
 
 {% block beforeContent %}
 {{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+
 {% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-6">
+  <div class="govuk-grid-column-full">
     {% if data.alert=="clone" and data.user=='employer'%}
     <div class="govuk-info-basic ">
       <div class="govuk-grid-row">
@@ -23,70 +25,71 @@ Manage vacancy
     </div>
     {% endif %}
     <h1 class="govuk-heading-xl">Manage vacancy</h1>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half ">
-        <span class="govuk-body govuk-!-font-weight-bold">Status</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">Live</span>
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Vacancy title</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">Business Apprenticeship</span>
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Vacancy reference number</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">VAC1000000997</span>
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Closing date</span>
-      </div>
-      <div class="govuk-grid-column-one-half ">
-        <span class="govuk-body">01 Jan 2019
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Possible start date</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">01 Feb 2019</span>
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Disability confident</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">Yes</span>
-      </div>
-    </div>
 
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full">
-        <div class="govuk-!-margin-top-6">
-          <a class="govuk-button" data-module="govuk-button" href="preview">View vacancy</a>
-        </div>
-      </div>
-    </div>
+
+
+<!-- ////START SUMMARY//// -->
+<dl class="govuk-summary-list">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Status
+    </dt>
+    <dd class="govuk-summary-list__value">
+      Live
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Vacancy title
+    </dt>
+    <dd class="govuk-summary-list__value">
+      Apprentice Bricklayer
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Vacancy reference
+    </dt>
+    <dd class="govuk-summary-list__value">
+      VAC1000000997
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Closing date
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">01 Jan 2022</p>
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Possible start date
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">01 Aug 2022</p>
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Disability confident
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">Yes</p>
+    </dd>
+  </div>
+</dl>
+<!-- ////END SUMMARY//// -->
+    
+
     <div class="grid-row">
       <div class="column-full">
-        <ul class="govuk-list das-action-links">
-          <li><a class="govuk-link button-link  govuk-link--no-visited-state" href="preview-edit">Edit vacancy</a></li>
-          <li><a class="govuk-link button-link  govuk-link--no-visited-state" href="clone-dates">Clone vacancy</a></li>
-          <li><a class="govuk-link button-link  govuk-link--no-visited-state" href="close">Close vacancy</a></li>
-        </ul>
+
         <p class="govuk-body">
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="preview">View vacancy</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="clone-dates">Clone vacancy</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Edit vacancy</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone vacancy</a> 
         </p>
       </div>
     </div>
@@ -95,7 +98,7 @@ Manage vacancy
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-l">Advert analytics
+    <h2 class="govuk-heading-l">Vacancy analytics
       <span class="govuk-caption-l">Showing stats from 20th Jan 2019 to 19th Feb 2019</span>
     </h2>
     <p class="govuk-body">Analytics show the total amount and the change from the previous 7 days</p>
@@ -131,7 +134,9 @@ Manage vacancy
     </div>
   </div>
 </div>
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+<br>
+<br>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <h2 class="govuk-heading-l">Manage applications</h2>
@@ -142,6 +147,8 @@ Manage vacancy
           <th class="govuk-table__cell" role="gridcell" class="bold">Application ID</th>
           <th class="govuk-table__cell" role="gridcell" class="bold">Status</th>
           <th class="govuk-table__cell" role="gridcell" class="bold">Date applied</th>
+          <th class="govuk-table__cell" role="gridcell" class="bold">Disability</th>
+
         </tr>
       </thead>
       <tbody>
@@ -150,28 +157,28 @@ Manage vacancy
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C5662EA</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">Successful</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
+
         </tr>
         <tr>
           <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-succesful">Bill Shoggins</a></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C3432TR</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">Unsuccessful</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
+
         </tr>
         <tr>
           <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-new">Rolo Tomasi</a></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">New</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
+
         </tr>
       </tbody>
     </table>
   </div>
 </div>
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    <div class="govuk-!-margin-top-6">
-      <a class="govuk-button" data-module="govuk-button" href="../vacancies">Return to dashboard</a>
-    </div>
-  </div>
-</div>
+
 {% endblock %}
