index updated to show sprint 6 and employer vacancy view updated

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -176,6 +176,20 @@
       {
         heading:
         {
+          text: "Design sprint 6"
+        },
+        content:
+        {
+          html: v6Html
+        },
+        summary:
+        {
+          html: '2nd February &mdash; May 2022'
+        }
+      }, 
+      {
+        heading:
+        {
           text: "Design sprint 5"
         },
         content:
