--- a/app/views/v7/employer/account/manage-vacancy-no-apprentice.html
+++ b/app/views/v7/employer/account/manage-vacancy-no-apprentice.html
@@ -111,7 +111,7 @@ line-height: 1.25 !important; */
 
         <p class="govuk-body">
 
-          <a class="govuk-link button-link" href="preview-edit">Edit advert</a> &nbsp;
+          <!-- <a class="govuk-link button-link" href="preview-edit">Edit advert</a> &nbsp; -->
           <a class="govuk-linkbutton-link" href="clone-dates">Clone advert</a> &nbsp;
          <a class="govuk-link button-link" href="#">Close advert</a>
         </p>
