--- a/app/views/v7/employer/account/manage-vacancy-closed.html
+++ b/app/views/v7/employer/account/manage-vacancy-closed.html
@@ -5,6 +5,10 @@
 Manage apprentices
 {% endblock %}
 
+{% block beforeContent %}
+  <a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
 {% block content %}
 
 <style media="screen">
@@ -33,70 +37,106 @@ line-height: 1.25 !important; */
 </style>
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-6">
+  <div class="govuk-grid-column-full">
     {% if query.alert == 'yes'%}
     <div class="govuk-info-summary ">
             <p class="govuk-body">Vacancy VAC1000001618 - 'Engineering Technician Level 3 Product Design and Development Apprentice' has been closed.</p>
             <p class="govuk-body govuk-!-margin-bottom-0">The vacancy will be unpublished from the Find an apprenticeship service within the next hour.</p>
     </div>
     {% endif %}
-    <h1 class="govuk-heading-xl">Manage vacancy</h1>
 
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half ">
-        <span class="govuk-body govuk-!-font-weight-bold">Status</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">Closed</span>
+
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    <h1 class="govuk-heading-xl">Manage advert</h1>
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full ">
+       
+        <!-- ////START SUMMARY//// -->
+<dl class="govuk-summary-list">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Status
+    </dt>
+    <dd class="govuk-summary-list__value">
+     Closed
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Advert title
+    </dt>
+    <dd class="govuk-summary-list__value">
+      Apprentice Bricklayer
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Advert reference
+    </dt>
+    <dd class="govuk-summary-list__value">
+      VAC1000000997
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Closing date
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">01 Jan 2022</p>
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Possible start date
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">01 Aug 2022</p>
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Disability confident
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">Yes</p>
+    </dd>
+  </div>
+</dl>
+<!-- ////END SUMMARY//// -->
+
       </div>
     </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Vacancy title</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">Apprentice Bricklayer</span>
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Vacancy ref</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">VAC1000000997</span>
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Closing date</span>
-      </div>
-      <div class="govuk-grid-column-one-half ">
-        <span class="govuk-body">01 Jan 2019
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Possible start date</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">01 Feb 2019</span>
-      </div>
-    </div>
+
     <div class="grid-row">
       <div class="column-full">
-        <ul class="govuk-list das-action-links">
-          <li><a class="govuk-link button-link" target="_blank" href="preview">View vacancy</a></li>
-          <li><a class="govuk-linkbutton-link" href="clone-change-dates?edit=">Clone vacancy</a></li>
+       
 
-        </ul>
+          <form method="post" action="preview">
+
+          <button class="govuk-button" data-module="govuk-button">
+            View advert
+          </button>
+
+        </form>
+
         <p class="govuk-body">
+
+          <!-- <a class="govuk-link button-link" href="preview-edit">Edit advert</a> &nbsp; -->
+          <a class="govuk-linkbutton-link" href="clone-dates">Clone advert</a> &nbsp;
+         <!-- <a class="govuk-link button-link" href="#">Close advert</a> -->
         </p>
+
+
+
       </div>
     </div>
 
   </div>
 
 </div>
+
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -171,12 +211,6 @@ line-height: 1.25 !important; */
 
     </div>
   </div>
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-        <div class="govuk-!-margin-top-6">
-            <a class="govuk-button" data-module="govuk-button" href="../vacancies">Return to dashboard</a>
-        </div>
-    </div>
-</div>
+
 
 {% endblock %}
