--- a/app/views/v7/employer/account/manage-vacancy.html
+++ b/app/views/v7/employer/account/manage-vacancy.html
@@ -5,85 +5,100 @@
 Manage apprentices
 {% endblock %}
 
+{% block beforeContent %}
+  <a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-6">
+  <div class="govuk-grid-column-full">
     {% if data.alert=="clone" and data.user=='employer'%}
     <div class="govuk-info-basic ">
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
           <!-- <span class="govuk-!-font-weight-bold">Activity</span> -->
           <p class="govuk-body">You can now clone from the any vacancy management page. From your vacancies dashabord search for a vacancy and click manage.</p>
-          <p class="govuk-body govuk-!-margin-bottom-0"><a href="?alert=none" class="govuk-link--no-visited-state">Dismiss this notification</a></p>
+          <p class="govuk-body"><a href="?alert=none" class="govuk-link--no-visited-state">Dismiss this notification</a></p>
         </div>
       </div>
     </div>
     {% endif %}
     <h1 class="govuk-heading-xl">Manage advert</h1>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half ">
-        <span class="govuk-body govuk-!-font-weight-bold">Status</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">Live</span>
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Advert title</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">Business Apprenticeship</span>
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Advert reference number</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">VAC1000000997</span>
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Closing date</span>
-      </div>
-      <div class="govuk-grid-column-one-half ">
-        <span class="govuk-body">01 Jan 2019
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Possible start date</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">01 Feb 2019</span>
-      </div>
-    </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-4">
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body govuk-!-font-weight-bold">Disability confident</span>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <span class="govuk-body">Yes</span>
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full ">
+
+        
+        <!-- ////START SUMMARY//// -->
+        <dl class="govuk-summary-list">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Status
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Live
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Advert title
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Apprentice Bricklayer
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Advert reference
+            </dt>
+            <dd class="govuk-summary-list__value">
+              VAC1000000997
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Closing date
+            </dt>
+            <dd class="govuk-summary-list__value">
+              <p class="govuk-body">01 Jan 2022</p>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Possible start date
+            </dt>
+            <dd class="govuk-summary-list__value">
+              <p class="govuk-body">01 Aug 2022</p>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Disability confident
+            </dt>
+            <dd class="govuk-summary-list__value">
+              <p class="govuk-body">Yes</p>
+            </dd>
+          </div>
+        </dl>
+        <!-- ////END SUMMARY//// -->
+
       </div>
     </div>
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
-        <div class="govuk-!-margin-top-6">
+        <div class="">
           <a class="govuk-button" data-module="govuk-button" href="preview">View advert</a>
         </div>
       </div>
     </div>
     <div class="grid-row">
       <div class="column-full">
-        <ul class="govuk-list das-action-links">
-          <li><a class="govuk-link button-link  govuk-link--no-visited-state" href="preview-edit">Edit advert</a></li>
-          <li><a class="govuk-link button-link  govuk-link--no-visited-state" href="clone-dates">Clone advert</a></li>
-          <li><a class="govuk-link button-link  govuk-link--no-visited-state" href="close">Close advert</a></li>
-        </ul>
+
+       
         <p class="govuk-body">
+                    <a class="govuk-link button-link  govuk-link--no-visited-state" href="preview-edit">Edit advert</a> &nbsp;
+                    <a class="govuk-link button-link  govuk-link--no-visited-state" href="clone-dates">Clone advert</a> &nbsp;
+                    <a class="govuk-link button-link  govuk-link--no-visited-state" href="close">Close advert</a>          
         </p>
       </div>
     </div>
@@ -128,7 +143,10 @@ Manage apprentices
     </div>
   </div>
 </div>
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+<br>
+<br>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <h2 class="govuk-heading-l">Manage applications</h2>
@@ -139,6 +157,8 @@ Manage apprentices
           <th class="govuk-table__cell" role="gridcell" class="bold">Application ID</th>
           <th class="govuk-table__cell" role="gridcell" class="bold">Status</th>
           <th class="govuk-table__cell" role="gridcell" class="bold">Date applied</th>
+          <th class="govuk-table__cell" role="gridcell" class="bold">Disability</th>
+
         </tr>
       </thead>
       <tbody>
@@ -147,28 +167,26 @@ Manage apprentices
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C5662EA</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">Successful</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Disability">No</td>
+
         </tr>
         <tr>
           <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-succesful">Bill Shoggins</a></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C3432TR</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">Unsuccessful</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Disability">No</td>
         </tr>
         <tr>
           <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-new">Rolo Tomasi</a></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">New</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Disability">No</td>
         </tr>
       </tbody>
     </table>
   </div>
 </div>
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    <div class="govuk-!-margin-top-6">
-      <a class="govuk-button" data-module="govuk-button" href="../vacancies">Return to dashboard</a>
-    </div>
-  </div>
-</div>
+
 {% endblock %}
