provider - view vacancy journey code and pages simplified

--- a/app/views/v7/_summary.html
+++ b/app/views/v7/_summary.html
@@ -20,7 +20,7 @@
         <tbody class='govuk-table__body'>
           <tr class='govuk-table__row'>
             <td class='govuk-table__cell'>Updating designs (employer, provider and traineeship) in places that show 'view only' of the advert so they are consistent.</td>
-            <td class='govuk-table__cell'>There is currently no way to return back when a user clicks to 'view' the advert.</td>
+            <td class='govuk-table__cell'>There is currently no way to return back when a user clicks to 'view' the advert. There are also design and content inconsistenciess across the pages.</td>
           </tr>
         </tbody>
       </table>"
@@ -35,29 +35,30 @@
       <li><a href="https://trello.com/c/wXuKlerw/213-213-traineeship-dashboard-view-vacancy-links" class="govuk-link govuk-link--no-visited-state">#213 Traineeship Dashboard View Vacancy links</a></li>  
     </ul>
 
-    <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Design artefacts</h4>  
+    <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Journey flow</h4>  
     <ul class="govuk-list govuk-list--bullet">                           
       <li><a href="https://lucid.app/lucidspark/75df8cd3-1247-466f-b7c6-7980cf119bf5/edit?existing=1&docId=75df8cd3-1247-466f-b7c6-7980cf119bf5&shared=true&invitationId=inv_295930d0-a2eb-4b25-a72a-e25f0aea5c39#" class="govuk-link govuk-link--no-visited-state">Lucid board</a></li>
     </ul>
 
-    <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Copy docs</h4>
-    <ul class="govuk-list govuk-list--bullet"> 
-      <li></li>
-    </ul>
 
-      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Employer prototype</h4>                                              
+      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Employer 'view advert' journey</h4>                                              
       <div class="govuk-button-group">
-        <a href="v7/employer/login" class="govuk-button" style="background: #6F72AF" data-module="govuk-button">Create an advert</a>
+        <a href="v7/employer/login" class="govuk-button" style="background: #6F72AF" data-module="govuk-button">View advert</a>
 
-        <a href="v7/employer/login?startpage=1" class="govuk-button" style="background: #6F72AF" data-module="govuk-button">Create an advert (new user)</a>
+        <!-- <a href="v7/employer/login?startpage=1" class="govuk-button" style="background: #6F72AF" data-module="govuk-button">Create an advert (new user)</a> -->
       </div>
 
-      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Provider prototype <span style="font-weight: normal">(includes traineeship journey) </span></h4>
+      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Provider 'view vacancy' journey</h4>
 
       <div class="govuk-button-group">
-        <a href="v7/provider/login" class="govuk-button" style="background:#F47737" data-module="govuk-button">Create a vacancy</a> 
+        <a href="v7/provider/login" class="govuk-button" style="background:#F47737" data-module="govuk-button">View vacancy</a> 
 
-        <a href="v7/provider/login?startpage=1" class="govuk-button" style="background: #F47737" data-module="govuk-button">Create a vacancy (new user)</a>
+        <!-- <a href="v7/provider/login?startpage=1" class="govuk-button" style="background: #F47737" data-module="govuk-button">Create a vacancy (new user)</a> -->
+      </div>
+
+      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Traineeship 'view advert' journey</h4>                                              
+      <div class="govuk-button-group">
+        <a href="v7/employer/login" class="govuk-button" style="background: #417F82" data-module="govuk-button">View vacancy</a>
       </div>
   </div>
 </div>
