--- a/app/views/v7/provider/account-home.html
+++ b/app/views/v7/provider/account-home.html
@@ -73,7 +73,7 @@
 
 					<div class="govuk-grid-column-one-half">
 						<h2 class="govuk-heading-m">
-							<a href="{% if data.startpage == 1 %}create/start-page{% else %}dashboard{% endif %}" class="govuk-link govuk-link--no-visited-state">Recruit apprentices</a>
+							<a href="view-vacancy/0-dashboard" class="govuk-link govuk-link--no-visited-state">Recruit apprentices</a>
 						</h2>
 						<p>Create a vacancy to recruit an apprentice and manage applications.</p>
 					</div>
