--- a/app/views/v7/provider/account/manage-vacancy.html
+++ b/app/views/v7/provider/account/manage-vacancy.html
@@ -104,30 +104,42 @@ Manage vacancy
     <p class="govuk-body">Analytics show the total amount and the change from the previous 7 days</p>
     <div id="analytics" class="govuk-grid-row">
       <div class="analytics--block govuk-grid-column-one-half">
-        <h3 class="analytics--header govuk-heading-s">Appeared in search</h3>
+        <!-- <h3 class="analytics--header govuk-heading-s">Appeared in search</h3> -->
+        <h3 class="govuk-heading-s">Appeared in search</h3>
         <div class="analytics--summary">
-          <div class="analytics--numeric">68 <span class="govuk-visually-hidden">times</span></div>
+          <!-- <div class="analytics--numeric">68 <span class="govuk-visually-hidden">times</span></div> -->
+          <p class="analytics--info">68</p>
           <p class="analytics--info"><span class="govuk-!-font-weight-bold">+12</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
         </div>
+        <!-- <div class="analytics--summary">
+          <div class="analytics--numeric">68 <span class="govuk-visually-hidden">times</span></div>
+          <p class="analytics--info"><span class="govuk-!-font-weight-bold">+12</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
+        </div> -->
       </div>
       <div class="analytics--block govuk-grid-column-one-half">
-        <h3 class="analytics--header govuk-heading-s">Total times viewed</h3>
+        <!-- <h3 class="analytics--header govuk-heading-s">Total times viewed</h3> -->
+        <h3 class="govuk-heading-s">Total times viewed</h3>
         <div class="analytics--summary">
-          <div class="analytics--numeric">12</div>
+          <!-- <div class="analytics--numeric">12</div> -->
+          <p class="analytics--info">12</p>
           <p class="analytics--info"><span class="govuk-!-font-weight-bold">+5</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
         </div>
       </div>
       <div class="analytics--block govuk-grid-column-one-half">
-        <h3 class="analytics--header govuk-heading-s">Total applications started</h3>
+        <!-- <h3 class="analytics--header govuk-heading-s">Total applications started</h3> -->
+        <h3 class="govuk-heading-s">Total applications started</h3>
         <div class="analytics--summary">
-          <div class="analytics--numeric">7</div>
+          <!-- <div class="analytics--numeric">7</div> -->
+          <p class="analytics--info">7</p>
           <p class="analytics--info"><span class="govuk-!-font-weight-bold">+1</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
         </div>
       </div>
       <div class="analytics--block govuk-grid-column-one-half">
-        <h3 class="analytics--header govuk-heading-s">Total applications submitted</h3>
+        <!-- <h3 class="analytics--header govuk-heading-s">Total applications submitted</h3> -->
+        <h3 class="govuk-heading-s">Total applications submitted</h3>
         <div class="analytics--summary">
-          <div class="analytics--numeric">1</div>
+          <!-- <div class="analytics--numeric">1</div> -->
+          <p class="analytics--info">12</p>
           <p class="analytics--info"><span class="govuk-!-font-weight-bold">No</span> increase</p>
         </div>
       </div>
