--- a/app/views/v7/provider/view-vacancy/0-dashboard.html
+++ b/app/views/v7/provider/view-vacancy/0-dashboard.html
@@ -73,20 +73,12 @@ Recruitment - {{serviceName}} - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">8</span>
-              <a class="card-link" href="vacancies?filter=draft">
+              <a class="card-link" href="#">
                 Draft vacancies
               </a>
             </h3>
             <p class="govuk-body das-card--description">Vacancies that need completing and sending for review.</p>
-            <!-- <p class="govuk-body das-card--description">./vacancies published on Find an Apprenctice service</p>
-              <ul class="das-card--tasks govuk-list">
-                <li>
-                  <a class="govuk-link" href="vacancies?status=closing">6 vacancies are closing soon</a>
-                </li>
-                <li>
-                  <a class="govuk-link" href="vacancies?status=closing-no-applications">3 vacancies are closing soon and have no applications</a>
-                </li>
-              </ul> -->
+
           </div>
 
         </div>
@@ -96,17 +88,12 @@ Recruitment - {{serviceName}} - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">2</span>
-              <a class="card-link" href="vacancies?filter=pending review">
+              <a class="card-link" href="1a-pending-employer-review">
                   Pending employer review
               </a>
             </h3>
               <p class="govuk-body das-card--description">Vacancies that have been sent to the employer for review.</p>
-            <!-- <p class="govuk-body das-card--description"></p> -->
-              <!-- <ul class="das-card--tasks govuk-list">
-                <li>
-                  <a class="ga-track-anchor-click" href="vacancies?status=new" data-ga-event-category="link - click" >6 new applications to look at </a>
-                </li>
-              </ul> -->
+
           </div>
 
         </div>
@@ -118,7 +105,7 @@ Recruitment - {{serviceName}} - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">2</span>
-              <a class="card-link" href="vacancies?filter=pending review">
+              <a class="card-link" href="2a-pending-esfa-review">
                 Pending ESFA review
               </a>
             </h3>
@@ -140,7 +127,7 @@ Recruitment - {{serviceName}} - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">2</span>
-              <a class="card-link" href="vacancies?filter=rejected">
+              <a class="card-link" href="#">
                   Rejected vacancies
               </a>
             </h3>
@@ -156,7 +143,7 @@ Recruitment - {{serviceName}} - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">11</span>
-              <a class="card-link" href="vacancies?filter=live">
+              <a class="card-link" href="3a-live">
                 Live vacancies
               </a>
             </h3>
@@ -178,7 +165,7 @@ Recruitment - {{serviceName}} - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">20</span>
-              <a class="card-link" href="vacancies?filter=new">
+              <a class="card-link" href="4a-new-applications">
                   New applications
               </a>
 
@@ -205,7 +192,7 @@ Recruitment - {{serviceName}} - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">11</span>
-              <a class="card-link" href="vacancies?filter=any">
+              <a class="card-link" href="5a-closed">
                   Closed vacancies
               </a>
             </h3>
@@ -215,7 +202,7 @@ Recruitment - {{serviceName}} - GOV.UK
       </div>
     </div>
 
-    <a href="vacancies?filter=any" class="govuk-link govuk-!-font-size-24 govuk-!-font-weight-bold govuk-link--no-visited-state" name="button">View all your vacancies (56)</a>
+    <a href="#" class="govuk-link govuk-!-font-size-24 govuk-!-font-weight-bold govuk-link--no-visited-state" name="button">View all your vacancies (56)</a>
     <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
     <div class="govuk-grid-row">
