--- a/app/views/v7/provider/view-vacancy/2b-manage-vacancy.html
+++ b/app/views/v7/provider/view-vacancy/2b-manage-vacancy.html
@@ -1,8 +1,7 @@
 {% extends "tp-layout.html" %}
 
-
 {% block pageTitle %}
-Manage apprentices
+Manage vacancy
 {% endblock %}
 
 {% block beforeContent %}
@@ -36,7 +35,7 @@ Manage apprentices
       Status
     </dt>
     <dd class="govuk-summary-list__value">
-      Closed
+      Pending ESFA review
     </dd>
   </div>
   <div class="govuk-summary-list__row">
@@ -76,7 +75,7 @@ Manage apprentices
       Disability confident
     </dt>
     <dd class="govuk-summary-list__value">
-      <p class="govuk-body">No</p>
+      <p class="govuk-body">Yes</p>
     </dd>
   </div>
 </dl>
@@ -87,8 +86,9 @@ Manage apprentices
       <div class="column-full">
 
         <p class="govuk-body">
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="preview">View vacancy</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="view">View vacancy</a> &nbsp;
           <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone vacancy</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Delete vacancy</a> 
         </p>
       </div>
     </div>
@@ -151,44 +151,11 @@ Manage apprentices
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <h2 class="govuk-heading-l">Manage applications</h2>
-    <table class="govuk-table responsive-table">
-      <thead class="govuk-table__header">
-        <tr class="govuk-table__row" role="row">
-          <th class="govuk-table__cell" role="gridcell" class="bold">Name</th>
-          <th class="govuk-table__cell" role="gridcell" class="bold">Application ID</th>
-          <th class="govuk-table__cell" role="gridcell" class="bold">Status</th>
-          <th class="govuk-table__cell" role="gridcell" class="bold">Date applied</th>
-          <th class="govuk-table__cell" role="gridcell" class="bold">Disability</th>
+   
+    <p>
+      Candidate applications for this apprenticeship will appear here.
+    </p>
 
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-failed">Faizal Dawood</a></td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C5662EA</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Status">Successful</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
-
-        </tr>
-        <tr>
-          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-succesful">Bill Shoggins</a></td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C3432TR</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Status">Unsuccessful</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
-
-        </tr>
-        <tr>
-          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="application-new">Rolo Tomasi</a></td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Status">New</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
-
-        </tr>
-      </tbody>
-    </table>
   </div>
 </div>
 
