--- a/app/views/v7/provider/view-vacancy/3b-manage-vacancy.html
+++ b/app/views/v7/provider/view-vacancy/3b-manage-vacancy.html
@@ -1,8 +1,7 @@
 {% extends "tp-layout.html" %}
 
-
 {% block pageTitle %}
-Manage apprentices
+Manage vacancy
 {% endblock %}
 
 {% block beforeContent %}
@@ -36,7 +35,7 @@ Manage apprentices
       Status
     </dt>
     <dd class="govuk-summary-list__value">
-      Closed
+      Live
     </dd>
   </div>
   <div class="govuk-summary-list__row">
@@ -76,7 +75,7 @@ Manage apprentices
       Disability confident
     </dt>
     <dd class="govuk-summary-list__value">
-      <p class="govuk-body">No</p>
+      <p class="govuk-body">Yes</p>
     </dd>
   </div>
 </dl>
@@ -87,8 +86,10 @@ Manage apprentices
       <div class="column-full">
 
         <p class="govuk-body">
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="preview">View vacancy</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="view">View vacancy</a> &nbsp;
           <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone vacancy</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Edit vacancy</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Delete vacancy</a> 
         </p>
       </div>
     </div>
