--- a/app/views/v7/provider/view-vacancy/1b-manage-vacancy.html
+++ b/app/views/v7/provider/view-vacancy/1b-manage-vacancy.html
@@ -43,7 +43,7 @@ Manage vacancy
       Vacancy title
     </dt>
     <dd class="govuk-summary-list__value">
-      Apprentice Bricklayer
+      Electronic Engineering Technician Apprentice
     </dd>
   </div>
   <div class="govuk-summary-list__row">
