--- a/app/views/v7/provider/view-vacancy/3b-manage-vacancy.html
+++ b/app/views/v7/provider/view-vacancy/3b-manage-vacancy.html
@@ -43,7 +43,7 @@ Manage vacancy
       Vacancy title
     </dt>
     <dd class="govuk-summary-list__value">
-      Apprentice Bricklayer
+      Electronic Engineering Technician Apprentice
     </dd>
   </div>
   <div class="govuk-summary-list__row">
@@ -81,7 +81,7 @@ Manage vacancy
 </dl>
 <!-- ////END SUMMARY//// -->
     
-
+<!-- ///ANALYTICS//// -->
     <div class="grid-row">
       <div class="column-full">
 
@@ -146,7 +146,7 @@ Manage vacancy
     </div>
   </div>
 </div>
-
+<!-- ////END ANALYTICS//// -->
 <br>
 <br>
 <div class="govuk-grid-row">
