--- a/app/views/v7/provider/view-vacancy/view.html
+++ b/app/views/v7/provider/view-vacancy/view.html
@@ -21,7 +21,7 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
       <div class="govuk-grid-row govuk-!-margin-bottom-6">
         <div class="govuk-grid-column-full">
           <h2 class="govuk-heading-xl govuk-!-margin-bottom-6 govuk-!-width-three-quarters">
-            {% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}
+            Electronic Engineering Technician Apprentice
             <div class="govuk-caption-xl govuk-!-margin-top-1">ABC Opticians.</div>
           </h2>
         </div>
