--- a/app/views/v7/employer/view-advert/1b-manage-advert.html
+++ b/app/views/v7/employer/view-advert/1b-manage-advert.html
@@ -33,7 +33,7 @@ Manage advert
       Advert title
     </dt>
     <dd class="govuk-summary-list__value">
-      Apprentice Bricklayer
+      Electronic Engineering Technician Apprentice
     </dd>
   </div>
   <div class="govuk-summary-list__row">
@@ -84,8 +84,8 @@ Manage advert
         </div>
 
         <p class="govuk-body">
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="view">View vacancy</a> &nbsp;
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone vacancy</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone advert</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Close advert</a> &nbsp;
         </p>
       </div>
     </div>
